# B23Downloader

./: CMakeLists.txt  README.md  fix.md
.github/workflows/: build.yml
B23Downloader/: .gitignore  AboutWidget.cpp  AboutWidget.h  B23Downloader.pro  B23Downloader.pro.qtds  CMakeLists.txt  DownloadDialog.cpp  DownloadDialog.h  DownloadTask.cpp  DownloadTask.h  Extractor.cpp  Extractor.h  Flv.cpp  Flv.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MyTabWidget.cpp  MyTabWidget.h  Network.cpp  Network.h  QrCode.cpp  Settings.cpp  Settings.h  TaskTable.cpp  TaskTable.h  clsmyprocessinfo.cpp  clsmyprocessinfo.h  globalv.cpp  globalv.h  icons.qrc  main.cpp  utils.cpp  utils.h
